@@ -147,3 +147,14 @@ LIB_COMPOJOOM_FILE_DATA_UPDATED="<a href='%s' target='_blank'>Item with id %s up
 LIB_COMPOJOOM_FILE_MULTIMEDIA_NEEDS_TO_BE_DELETED="The file: %s in <a href='%s' target='_blank'>Item with id %s is not existing</a>. Please manually delete this file entry. Otherwise the gallery won't work!"
 LIB_COMPOJOOM_FIELD_ORIGINAL_THUMB_LABEL="Original"
 LIB_COMPOJOOM_FIELD_ORIGINAL_THUMB_DESC="If the original file is bigger than the dimentions here, it will be resized on the user's browser & will be uploaded resized to the server."
+LIB_COMPOJOOM_EXTENSION_AT_JED="%s at the Joomla Extension Directory (JED)!"
+LIB_COMPOJOOM_JED_PLEASED="Thank you for using %s. We hope that you are pleased with the extension and service
+you receive from us. If not, please give as an opportunity to improve your experience
+right away. Create a ticket or post a forum message on <a href='%s'>compojoom.com</a>."
+LIB_COMPOJOOM_JED_MEANWHILE="Meanwhile we also welcome you to post a review at the JED
+so that others can benefit from your experience.
+As busy Joomla Extensions developers, we know how scarce time can be,
+so we especially appreciate	your time and input!"
+LIB_COMPOJOOM_JED_LEAVE_A_REVIEW_NOW="Leave a Review now"
+LIB_COMPOJOOM_JED_HIDE_THIS_AND_DONT_REMIND="I've already reviewed %s, don't remind me again!"
+LIB_COMPOJOOM_JED_REMIND_NEXT_WEEK="Remind me next week"
